--- a/henm/henm-config.yaml
+++ b/henm/henm-config.yaml
@@ -2,14 +2,14 @@
 
 simulations:
   sim_1:
-    structure_file: "../gromacs/sim_1/confout_10210.gro"
+    structure_file: "../gromacs/sim_1/confout_*.gro"
     trajectory_file: "../gromacs/sim_1/traj_comp.xtc"
   sim_2:
-    structure_file: "../gromacs/sim_2/confout_10510.gro"
+    structure_file: "../gromacs/sim_2/confout_*.gro"
     trajectory_file: "../gromacs/sim_2/traj_comp.xtc"
   sim_3:
-    structure_file: "../gromacs/sim_4/confout_10810.gro"
+    structure_file: "../gromacs/sim_3/confout_*.gro"
     trajectory_file: "../gromacs/sim_3/traj_comp.xtc"
   sim_4:
-    structure_file: "../gromacs/sim_4/congout_10.gro"
+    structure_file: "../gromacs/sim_4/confout_*.gro"
     trajectory_file: "../gromacs/sim_4/traj_comp.xtc"
